feat\!: added block height into transaction outputs
